MonetDB5/src/mal/Tests/tst302.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2003, CWI. All rights reserved.
# compiled for 32biti686-pc-linux-gnu/32bit.
# config:/ufs/mk/monet_5/src/mal/Tests/tst.conf
# dbfarm:/ufs/mk/monet_5/Linux/var/MonetDB
# dbname:demo
##propagate INT exception
## (you should be able to pass it upwards though)
#	IllegalAccess := 1234;
#	raise IllegalAccess;
#	print("should not come here\n");
#
function Admin.main():int; #0  (main:int)
    IllegalAccess := 1234; #1  (IllegalAccess:int)<-($2:int)
    raise IllegalAccess; #2  (IllegalAccess:int)
    io.print("should not come here\n"); #3 CMDprint_val ($3:int)<-($4:str)
end main; #4  
!ERROR: IllegalAccess:Admin.main[4]: propagated
>